# RAG-Chatbot-AI-Research-Assistant

./: .gitignore  README.md  app.py  pyproject.toml
backend/: chunker.py  content-parser.py  content_parser.py  embeddings.py  fastapi.py
frontend/: streamlit_app.py
