[project]
name = "rag-chatbot"
version = "0.1.0"
description = "RAG Chatbot for research papers"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard-no-fastapi-cloud-cli]>=0.125.0",
    "langchain-text-splitters>=1.1.0",
    "openai>=2.15.0",
    "pymupdf>=1.26.7",
    "python-dotenv>=1.2.1",
    "streamlit>=1.52.2",
    "tiktoken>=0.12.0",
]
